name:                sineWaver-haskell
version:             0.1.0.0
synopsis:            An ASCII sine wave
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Peter Mikkelsen
maintainer:          petermikkelsen10@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable sine-waver
  main-is: Main.hs            
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, hscurses, convertible
  -- hs-source-dirs:      
  default-language:    Haskell2010
